[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
repository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
protobook-api = { path = "./api", version = "0.1.0" }
bytemuck = "1.14"
num_enum = "0.7"
spl-associated-token-account = { version = "6.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
solana-program = "2.1"
steel = { git = "https://github.com/regolith-labs/steel.git", branch = "master", features = ["spl"] }
thiserror = "1.0"
