[workspace]
resolver = "2"
members = ["api", "cli", "program"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://protobook.xyz"
documentation = "https://docs.rs/protobook-api/latest/protobook_api/"
repository = "https://github.com/regolith-labs/protobook"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
anyhow = "1.0"
bytemuck = "1.14"
num_enum = "0.7"
protobook-api = { path = "./api" }
solana-account-decoder = "^2.1"
solana-client = "^2.1"
solana-sdk = "^2.1"
spl-associated-token-account = { version = "6.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
solana-program = "2.1"
steel = { version = "4.0.2", features = ["spl"] }
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
